@@ -432,8 +432,8 @@ AT_CHECK([$COMPILE_ONLY prog.cob], [0], [], [])
 AT_CLEANUP
 
 
-AT_SETUP([invalid key items])
-AT_KEYWORDS([file record alternate])
+AT_SETUP([INDEXED file invalid key items])
+AT_KEYWORDS([record ALTERNATE split])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION   DIVISION.
@@ -454,6 +454,12 @@ AT_DATA([prog.cob], [
                         ALTERNATE KEY IS TEST-P4
                         ALTERNATE KEY IS NOT-THERE
                         ALTERNATE KEY IS SOME-REC.
+       SELECT TEST-MORE ASSIGN TO 'FILE-TEST-EXT'
+                        ORGANIZATION  IS INDEXED
+                        ACCESS MODE   IS DYNAMIC
+                        RECORD KEY    IS NOT-HERE-KEY
+                           SOURCE     IS NOT-IN-FILE1
+                                         NOT-IN-FILE2.
        DATA             DIVISION.
        FILE             SECTION.
        FD TEST-SOME.
@@ -463,6 +469,9 @@ AT_DATA([prog.cob], [
            05 TEST-P1   PIC X(4).
            05 FILLER    PIC X(4).
            05 TEST-P4   PIC X(4).
+       FD TEST-MORE.
+       01  MORE-REC.
+           05 MORE-DATA PIC X(4).
        WORKING-STORAGE  SECTION.
        77  TEST-P2   PIC S9(4) COMP.
        77  TEST-P3   PIC S9(5) COMP-3.
@@ -479,6 +488,9 @@ prog.cob:11: error: 'TEST-P1' is not defined
 prog.cob:12: error: 'TEST-P3' is not defined
 prog.cob:18: error: 'NOT-THERE' is not defined
 prog.cob:13: error: invalid KEY item 'SOME-REC', not in file 'TEST-FILE'
+prog.cob:24: error: 'NOT-IN-FILE1' is not defined
+prog.cob:20: error: invalid KEY item 'NOT-HERE-KEY', not in file 'TEST-MORE'
+prog.cob:25: error: 'NOT-IN-FILE2' is not defined
 ])
 
 AT_CLEANUP
@@ -1254,8 +1266,8 @@ AT_CHECK([$COMPILE_ONLY -std=ibm-strict prog.cob], [0], [],
 AT_CLEANUP
 
 
-AT_SETUP([PASSWORD clause, Indexed files])
-AT_KEYWORDS([file external split-key])
+AT_SETUP([INDEXED file PASSWORD clause])
+AT_KEYWORDS([file external split key])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
